--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-Name: Xandra Vos
+<!-- 
+Name: Xandra Vos 
 Course: Data Processing
+-->
 
-Links:
-Homework/Week_3/javascriptIntro.html
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Index</title>
+  </head>
+  <body>
+    Links:
+    <b>
+    Homework/Week_3/javascriptIntro.html
+  </body>
+</html>
