--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <title>Index</title>
   </head>
-  <body>
-    <p>
+  <body style="background-color:powderblue;">
+    <p style="font-family:courier;">
       Name: Xandra Vos 
-      <b></b>
+      <br>
       Course: Data Processing
     </p>
-    <p>
-    Links:
-    <b></b>
-    Homework/Week_3/javascriptIntro.html
+    <p style="font-family:courier;">
+      <b>Links:</b>
+      <br>
+      Homework/Week_3/javascriptIntro.html
     </p>
   </body>
 </html>
