--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <br>
       Course: Data Processing
     </p>
-    <p style="font-family:consolas;">
+    <p style="font-family:courier;">
       <b>Links:</b>
       <br>
       Homework/Week_3/javascriptIntro.html
