--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p style="font-family:courier;">
       <b>Links:</b>
       <br>
-      Homework/Week_3/javascriptIntro.html
+      <a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>
     </p>
   </body>
 </html>
