--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p style="font-family:courier;">
       <b>Links:</b>
       <br>
-      <a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>
+      <a href="https://github.com/xandravos/DataProcessing/Homework/Week_3/javascriptInto.html">Week 3</a>
     </p>
   </body>
 </html>
