--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p style="font-family:courier;">
       <b>Links:</b>
       <br>
-      <a href="https://github.com/xandravos/DataProcessing/Homework/Week_3/javascriptIntro.html">Week 3</a>
+      Homework/Week_3/javascriptIntro.html
     </p>
   </body>
 </html>
