--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   </head>
   <body style="background-color:powderblue;">
     <p style="font-family:courier;">
-      Name: Xandra Vos 
+      Name: Xandra Vos
       <br>
       Course: Data Processing
     </p>
     <p style="font-family:courier;">
       <b>Links:</b>
       <br>
-      <a href="https://xandravos.github.io/DataProcessing/Homework/Week_3/javascriptIntro.html">Week 3</a>
+      <a href="https://xandravos.github.io/DataProcessing/Homework/Week_3/javascriptIntro.html">Week 3 - JavaScript</a>
+      <a href="https://xandravos.github.io/DataProcessing/Homework/Week_4/d3Barchart.html">Week 4 - D3 Barchart</a>
     </p>
   </body>
 </html>
