--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <a href="https://xandravos.github.io/DataProcessing/Homework/Week_3/javascriptIntro.html">Week 3 - JavaScript</a>
       <br>
       <a href="https://xandravos.github.io/DataProcessing/Homework/Week_4/d3Barchart.html">Week 4 - D3 Barchart</a>
+      <br>
+      <a href="https://xandravos.github.io/DataProcessing/Homework/Week_4/scatter.html">Week 5 - D3 Scatterplot</a>
     </p>
   </body>
 </html>
