--- a/Homework/Week_5/scatter.html
+++ b/Homework/Week_5/scatter.html
@@ -29,9 +29,9 @@ HTML file to post on the local host page.
             In this HTML page a scatterplot of women in science versus consumer
             confidence is shown. The data used to make this scatterplot is linked below.
             <br>
-            <a href="http://stats.oecd.org/SDMX-JSON/data/MSTI_PUB/TH_WRXRS.FRA+DEU+KOR+NLD+PRT+GBR/all?startTime=2007&endTime=2015">Percentage of women in science</a>
+            <a href="https://stats.oecd.org/SDMX-JSON/data/MSTI_PUB/TH_WRXRS.FRA+DEU+KOR+NLD+PRT+GBR/all?startTime=2007&endTime=2015">Percentage of women in science</a>
             <br>
-            <a href="http://stats.oecd.org/SDMX-JSON/data/HH_DASH/FRA+DEU+KOR+NLD+PRT+GBR.COCONF.A/all?startTime=2007&endTime=2015">Consumer confidence</a>
+            <a href="https://stats.oecd.org/SDMX-JSON/data/HH_DASH/FRA+DEU+KOR+NLD+PRT+GBR.COCONF.A/all?startTime=2007&endTime=2015">Consumer confidence</a>
         </p>
         <script src="scatter.js"></script>
     </body>
