--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <a href="https://xandravos.github.io/DataProcessing/Homework/Week_4/d3Barchart.html">Week 4 - D3 Barchart</a>
       <br>
       <a href="https://xandravos.github.io/DataProcessing/Homework/Week_5/scatter.html">Week 5 - D3 Scatterplot</a>
+      <br>
+       <a href="https://xandravos.github.io/DataProcessing/Homework/Week_5/linkedviews.html">Week 6 - D3 Linked Views</a>
     </p>
   </body>
 </html>
